<resources>
    <string name="app_name" translatable="false">is.gd</string>
    <string name="title">is.gd für Android</string>

    <string name="log">Statistiken für Aufrufe loggen?</string>
    <string name="schort">Kürzen</string>
    <string name="input">Zu kürzende URL</string>
    <string name="output">Gekürzte URL</string>
    <string name="output_stats">Statistik URL</string>
    <string name="create_url_base">https://is.gd/create.php</string>
    <string name="share_url_button">URL teilen</string>
    <string name="share_stats_button">URL teilen</string>

    <string name="action_settings">Settings</string>

    <!--These Strings are used in the nav-header-file and that is used for the sidebar.-->
    <string name="nav_header_title">ISGD Link shortener</string>
    <string name="nav_header_desc">The official ISGD Icon</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
